--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <div class="container">
 
     <div id="quote-box">
-      <p class="quote">Every great developer you know got there by solving problems they were unqualified to solve until they actually did it.</p>
-      <p class="source">Patrick McKenzie<span class="citation">Twitter</span><span class="year">2016</span></p>
+      <p class="quote">If you don't believe it or don't get it, I don't have the time to try to convince you, sorry.</p>
+      <p class="source">Satoshi Nakamoto<span class="citation"><a href="https://bitcointalk.org/index.php?topic=532.msg6306#msg6306" target="_blank">bitcointalk.org</a></span><span class="year">2010</span></p>
     </div>
 
     <button id="loadQuote">Show another quote</button>
